[SELC-4728] refactor test classes in connector module